tests/errors/not-wire-derivable/errors.snap
---
source: tests/errors.rs
expression: output
---
warning[E0101]: Name `bytes` is never used.
  │
5 │  let bytes = wire.encode widget
  │      ^^^^^
  ╰─𜱶 tests/errors/not-wire-derivable/main.pa:5:6

error[E0114]: Can't send `{label: string, on-click: int -> int}` across the wire: field `on-click` can't (functions aren't serializable).
  │
5 │  let bytes = wire.encode widget
  │              ^^^^^^^^^^^
  ╰─𜱶 tests/errors/not-wire-derivable/main.pa:5:14
